Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -130,7 +130,6 @@ span h4 {
    =============================== */
 
 .widget.extendednavigation {
-    float: left;
     max-width: 65%;
     @media @tablet {
     	float: none;
@@ -151,7 +150,6 @@ span h4 {
             }
         }
         ul {
-            float: right;
             text-align: center;
             padding: 0;
             @media @tablet {
